--- a/config/amd64/buildroot.config
+++ b/config/amd64/buildroot.config
@@ -390,8 +390,9 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.10.31"
 BR2_LINUX_KERNEL_VERSION="5.10.31"
 BR2_LINUX_KERNEL_PATCH=""
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
-BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
-# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+# BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="kernel.config"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES=""
 BR2_LINUX_KERNEL_CUSTOM_LOGO_PATH=""
 # BR2_LINUX_KERNEL_BZIMAGE is not set
